Change Log for OpenXava project
===============================

- Fix: Generate PDF fails in some browser configurations that ask for the PDF twice. 
- Fix: JS and CSS for editors not loaded when there are blank spaces in path.
- Fix: Message "WARNING! Trying to load controller {0} twice" for each controller.
- Driver versions in doc and new projects upgraded for MySQL, Db2.
- Tomcat-dbcp upgraded to 9.0.68.
- Tomcat-embed-jasper upgraded to 9.0.68.
- Tomcat-embed-core upgraded to 9.0.68.
- jaxb-impl upgraded from 2.3.1 to 2.3.7.
- Pdfbox upgraded to 2.0.27.
- Groovy upgraded to 4.0.6.
- Hibernate-envers upgraded to 5.6.12.Final.
- Hibernate-core upgraded to 5.6.12.Final.
- Getting started guide using Visual Studio Code in English, Spanish and Chinese.
- Fix: Bad layout for "Loading..." message on Safari 16 in MacOS 12.

OpenXava 7.0.1 (2022-10-21)
---------------------------
- Hibernate upgraded to 5.6.11.
- Hibernate Envers upgraded to 5.6.11.
- Groovy upgraded to 4.0.5.
- Jersey upgraded to 2.37.
- Driver versions in doc and new projects upgraded for MySQL, PostgreSQL, Oracle and MS SQL Server.
- Getting started guide using IntelliJ in English, Spanish and Chinese.
- Getting started guide using Maven in English, Spanish and Chinese.
- Video in Chinese for getting started guide. 
- Lesson 26 of course translated to Chinese, so now the whole course is in Chinese.
- Outdated documentation to deploy on Weblogic removed.
- Documentation for IntelliJ updated to use Maven.
- Improved Appendix D of course about testing with examples of HtmlUnit usage.
- Fix: @Coordinates editor does not work in development environment or starting from command line.
- Fix: Image and text in actions of subcontrollers are too close, also space is not the same that for icons.
- Fix: Broken internal links from annotations to their sections in reference guide.
- Fix: Broken links from Model chapter of reference guide to API javadoc. 