@@ -3,12 +3,11 @@
 <project name="OpenXavaDoc" default="createWar" basedir=".">
 
 	<property name="xava.version" value="7.0.1"/>
-	<!-- 
 	<property name="dist.dir" value="\\wsl$\Ubuntu\home\javi"/>
+	<!-- 
 	<property name="dist.dir" value="/home/javi/site"/>
-	-->
 	<property name="dist.dir" value="C:\cygwin\home\javi"/>
-	
+	-->
 
 	<target name="apidoc">
 		<delete dir="web/apidocs"/>
